--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             flex-grow: 1;
         }
     </style>
-</head>git init
+</head>
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="{% url 'core:listar_trabalhos' %}">Trabalhos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projetos</a> {# Link para a página de projetos, a ser criada #}
+                        <a class="nav-link" href="{% url 'core:listar_projetos' %}">Projetos</a> {# Link para a página de projetos, a ser criada #}
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
